--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,50 +1,35 @@
 body {
-    background-image: url("/assets/images/background.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    padding-top: 70px;
-    background-size: 100% 100%;
+    background: #267871;
+    background: -webkit-linear-gradient(to right, #6d14b6, #030d1141);
+    background: linear-gradient(to right, #6d14b6, #6d14b6);
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+a:hover {
+    color: #101d6496;
+}
+
+.navbar {
+    text-shadow: 2px 2px 4px #000;
 }
 
 .jumbotron {
-    background-color: rgba(36, 33, 33, 0.7);
-    color: white;
-    border-style: solid;
-    border-color: black;
+    background-image: url("../images/bg.png");
+    font-family: 'Major Mono Display', monospace;
+    margin-top: 80px;
+    text-shadow: 2px 2px 4px #000;
 }
 
-.panel-heading {
-    background-color: rgba(36, 33, 33, 0.8);
-    color: white;
+.card {
+    background-color: rgba(51, 51, 51, 0.8);
+    margin: 10px;
 }
 
-.panel {
-    background-image: url("/assets/images/backpanel.jpg");
-    border-style: solid;
-    border-color: grey;
-    border-width: 8px;
-
-}
-
-.btn-success {
-    color: rgb(255, 255, 255);
-    background: rgba(28, 134, 42, 0.8);
-}
-
-#scrape {
-    color: white;
-    background: rgba(8, 64, 87, 0.8);
-}
-
-.deleteNote {
-    display: inline-block;
-}
-
-.previousNotes {
-    display: inline-block;
-    width: 90%
-}
-
-#scrape {
-    margin: 8px 0px;
+.modal-content,
+.list-group-item {
+    background-color: rgba(51, 51, 51, 0.8) !important;
 }
